added order page

--- a/thirdpage.html
+++ b/thirdpage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Cookies</title>
+    <title>Cookie Orders</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="cache-control" content="no-cache" />
@@ -16,18 +16,14 @@
 
 <body>
     
-    <img id="choco" src="images/chocchip.png" />
-    <img id="peanut" src="images/peanutbutter.png" />
-    <img id="sugar" src="images/sugar.png" />
-    <div class="bigtext page">Click on the Cookies to Add to Your Order</div>
+    <img src="images/chocchip.png" />
+    <img src="images/peanutbutter.png" />
+    <img src="images/sugar.png" />
     <div class="block"></div>
-    <div class="page" id="total"></div>
+    <div class="bigtext page">Your Orders</div>
     <div class="block"></div>
-    <div class="page" id="order">COMPLETE ORDER</div>
+    <div id="allOrders"></div>
     <div class="block"></div>
-    <div class="page" id="clear">CLEAR ORDER</div>
-    <div class="block"></div>
-    <div class="page" id="myOrders">MY ORDERS</div>
 
     <script src="main.js"></script>
 </body>
