--- a/secondpage.html
+++ b/secondpage.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Thank You!</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="Cache-Control" content="no-store" />
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
@@ -16,9 +18,9 @@
     
     <div id="orderModal">
         <div id="modal">
-            <img id="choco" src="images/chocchip.png" />
-            <img id="peanut" src="images/peanutbutter.png" />
-            <img id="sugar" src="images/sugar.png" />
+            <img src="images/chocchip.png" />
+            <img src="images/peanutbutter.png" />
+            <img src="images/sugar.png" />
             <div id="modalText"></div>
             <div class="bigtext">Enjoy!</div>
         </div>
